# jm_pytorch_tutorials

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
notebooks/: Basic_computer_vision_mnist.ipynb  Intermediate_computer_vision.ipynb  Intermediate_computer_vision_CIFAR10.ipynb
src/jm_pytorch_tutorials/: __init__.py  utils.py
src/jm_pytorch_tutorials/models/: __init__.py  model_utils.py  models.py
src/jm_pytorch_tutorials/plot/: plot.py
src/jm_pytorch_tutorials/test/: test.py
src/jm_pytorch_tutorials/train/: train.py
