[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "jm_pytorch_tutorials"
description = "Python package for learning basic pytorch."
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    {name = "Joseph McKenna"}
]
maintainers = [
    {name = "Joseph McKenna", email = "jkmckenna@berkeley.edu"}
]
keywords = [
  "machine-learning",
  "education",
  "tutorials"
]
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization"
]
dependencies = [
    "hydra-core",
    "igraph",
    "lightning",
    "numpy>=1.22.0,<2",
    "omegaconf",
    "pandas>=1.4.2",
    "scikit-learn>=1.0.2",
    "scipy>=1.7.3",
    "seaborn>=0.11",
    "timm",
    "torch>=1.9.0",
    "torchvision",
    "torchaudio",
    "transformers",
    "tqdm"
]

version = "0.0.1"

[project.urls]
Source = "https://github.com/jkmckenna/jm_pytorch_tutorials"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
include = ["jm_pytorch_tutorials"]